# musl-libc

./: .gitignore  Makefile  POSIX_ARA_MOD.md  POSIX_ARA_MOD_README.txt  README  configure  function_pointer_translation_map.json  make_musl_bitcode.py  meson.build
arch/x86_64/: atomic_arch.h  pthread_arch.h  syscall_arch.h
include/: fcntl.h  pthread.h  signal.h  time.h  unistd.h
src/POSIX_ARA_MOD/: ara_sigaction_handling.c  atomic_arch.c  do_read.c  futex.c  pthread_arch.c  pthread_attr_setname_np.c  struct_field_detection.c  syscall_arch.c
src/fcntl/: open.c
src/internal/: pthread_impl.h
src/malloc/: lite_malloc.c
src/signal/: sigaction.c
src/stdlib/: wcstod.c  wcstol.c
src/thread/: pthread_attr_setschedparam.c
src/time/: nanosleep.c
src/unistd/: pipe.c
subprojects/: .gitignore  gllvm-meson.wrap  toolchains.wrap
tools/: ld.musl-clang.in  musl-clang.in
